--- a/index.html
+++ b/index.html
@@ -67,22 +67,22 @@
                     <div class="item">
                         <div class="info">
                             <span class="nome"> <i class="fa-brands fa-css3-alt"></i> CSS3</span>
-                            <span class="porcent">85%</span>
+                            <span class="porcent">90%</span>
                         </div>
 
                         <div class="barra">
-                            <div class="progresso" style="width: 85%;"></div>
+                            <div class="progresso" style="width: 90%;"></div>
                         </div>
                     </div>
 
                     <div class="item">
                         <div class="info">
                             <span class="nome"> <i class="fa-brands fa-square-js"></i> JavaScript</span>
-                            <span class="porcent">75%</span>
+                            <span class="porcent">85%</span>
                         </div>
 
                         <div class="barra">
-                            <div class="progresso" style="width: 75%;"></div>
+                            <div class="progresso" style="width: 85%;"></div>
                         </div>
                     </div>
 
@@ -127,46 +127,39 @@
 
                 <div id="formacao-container">
                     <div class="curso">
-                        <p class="periodo">1991 - 1994</p>
-                        <h3 class="instituicao">Escola Técnica Carioca</h3>
-                        <p class="titulacao">Técnico em Informática</p>
+                        <p class="periodo">2026 - 2028</p>
+                        <h3 class="titulacao">Sistemas para Internet</h3>
+                        <p class="instituicao">Uniasselvi</p>
                     </div>
-
-                    <div id="formacao-container">
-                        <div class="curso">
-                            <p class="periodo">1995 - 2000</p>
-                            <h3 class="instituicao">Instituto Superior de Tecnologia</h3>
-                            <p class="titulacao">Bacharelado em Ciência da Computação</p>
-                        </div>
-
-                        <div id="formacao-container">
-                            <div class="curso">
-                                <p class="periodo">1998 - 2000</p>
-                                <h3 class="instituicao">Centro de Graduação de Professores</h3>
-                                <p class="titulacao">Licenciatura em Informática</p>
-                            </div>
-                        </div>
+                </div>
 
             </article>
 
             <article id="projetos">
-                <h2> <i class="fa-solid fa-trowel-bricks"></i> Projetos</h2>
+                <h2> <i <i class="fa-solid fa-folder"></i> Projetos</h2>
 
                 <div id="projeto-container">
 
                     <div class="projeto">
-                        <img src="imgs/projeto-01-videos.jpg" alt="Projeto 1" class="foto-projeto">
+                        <img src="imgs/projeto-e-commerce.png" alt="Projeto 1" class="foto-projeto">
 
                         <div class="projeto-info">
-                            <p class="periodo">2022</p>
-                            <h3 class="titulo">Projeto de Vídeos</h3>
-                            <p>Projeto construído para treinar a inserção de vídeos em nosso site</p>
-                            <details class="descricao">
-                                <summary>Saiba mais...</summary>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi dolor recusandae id ad
-                                    voluptate? Temporibus tempore, dolorem sed aliquid beatae modi tenetur quibusdam
-                                    libero quia ex fugiat et adipisci ab.</p>
-                            </details>
+                            <h3 class="titulo">Projeto E-commerce</h3>
+                            <p>Projeto front-end de um e-commerce focado em organização com módulos js, manipulação de DOM e boas práticas de UI/UX.</p>
+                            <div class="descricao">
+                                <h4>Tecnologias</h4>
+                                <ul>
+                                    <li>HTML</li>
+                                    <li>CSS</li>
+                                    <li>JavaScript</li>
+                                </ul>
+
+                                <div class="tecnologias">
+                                    <i class="fa-brands fa-html5"></i>
+                                    <i class="fa-brands fa-css3-alt"></i>
+                                    <i class="fa-brands fa-square-js"></i>
+                                </div>
+                            </div>
                         </div>
                     </div>
 
