--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <img src="imgs/foto-perfil.jpg" alt="Paulo Arthur" class="foto">
 
             <h1>Paulo Arthur Maciel</h1>
-            <p>Sou Paulo Arthur, desenvolvedor Front-End em formação, apaixonado por tecnologia desde cedo.
+            <p>Me chamo Paulo Arthur, desenvolvedor Front-End em formação, apaixonado por tecnologia desde cedo.
                 Atualmente, foco em aprimorar minhas habilidades no desenvolvimento web, aplicando boas práticas de
                 código e criando interfaces funcionais, organizadas e com atenção à experiência do usuário (UX/UI).
 
@@ -141,11 +141,12 @@
                 <div id="projeto-container">
 
                     <div class="projeto">
-                        <img src="imgs/projeto-e-commerce.png" alt="Projeto 1" class="foto-projeto">
+                        <img src="imgs/projeto-e-commerce.png" alt="Projeto E-commerce" class="foto-projeto">
 
                         <div class="projeto-info">
                             <h3 class="titulo">Projeto E-commerce</h3>
-                            <p>Projeto front-end de um e-commerce focado em organização com módulos js, manipulação de DOM e boas práticas de UI/UX.</p>
+                            <p>Projeto front-end de um e-commerce focado em organização com módulos js, manipulação de
+                                DOM e boas práticas de UI/UX.</p>
                             <div class="descricao">
                                 <h4>Tecnologias</h4>
                                 <ul>
@@ -164,34 +165,51 @@
                     </div>
 
                     <div class="projeto">
-                        <img src="imgs/projeto-02-cordel.jpg" alt="Projeto 1" class="foto-projeto">
+                        <img src="imgs/catalogo-de-filmes.png" alt="Catálogo de Filmes" class="foto-projeto">
 
                         <div class="projeto-info">
-                            <p class="periodo">2023</p>
-                            <h3 class="titulo">Projeto Cordel</h3>
-                            <p>Projeto construído para treinar efeito paralax em imagens</p>
-                            <details class="descricao">
-                                <summary>Saiba mais...</summary>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi dolor recusandae id ad
-                                    voluptate? Temporibus tempore, dolorem sed aliquid beatae modi tenetur quibusdam
-                                    libero quia ex fugiat et adipisci ab.</p>
-                            </details>
+                            <h3 class="titulo">Catálogo de Filmes</h3>
+                            <p>Um catálogo de filmes desenvolvido em React, onde é possível visualizar cartazes, títulos
+                                e filtrar os filmes por categoria.</p>
+                            <div class="descricao">
+                                <h4>Tecnologias</h4>
+                                <ul>
+                                    <li>React</li>
+                                    <li>HTML</li>
+                                    <li>CSS</li>
+                                    <li>JavaScript</li>
+                                </ul>
+
+                                <div class="tecnologias">
+                                    <i class="fa-brands fa-react"></i>
+                                    <i class="fa-brands fa-html5"></i>
+                                    <i class="fa-brands fa-css3-alt"></i>
+                                    <i class="fa-brands fa-square-js"></i>
+                                </div>
+                            </div>
                         </div>
                     </div>
 
                     <div class="projeto">
-                        <img src="imgs/projeto-03-android.jpg" alt="Projeto 1" class="foto-projeto">
+                        <img src="imgs/relogio-digital.jpeg" alt="Relógio Digital" class="foto-projeto">
 
                         <div class="projeto-info">
-                            <p class="periodo">2023</p>
-                            <h3 class="titulo">Projeto Android</h3>
-                            <p>Projeto construído para treinar conteúdos e imagens dinâmicas</p>
-                            <details class="descricao">
-                                <summary>Saiba mais...</summary>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi dolor recusandae id ad
-                                    voluptate? Temporibus tempore, dolorem sed aliquid beatae modi tenetur quibusdam
-                                    libero quia ex fugiat et adipisci ab.</p>
-                            </details>
+                            <h3 class="titulo">Relógio Digital</h3>
+                            <p>Um mini projeto de Relógio Digital. O relógio exibe horas, minutos e segundos em tempo real, com uma interface limpa, moderna e responsiva.</p>
+                            <div class="descricao">
+                                <h4>Tecnologias</h4>
+                                <ul>
+                                    <li>HTML</li>
+                                    <li>CSS</li>
+                                    <li>JavaScript</li>
+                                </ul>
+
+                                <div class="tecnologias">
+                                    <i class="fa-brands fa-html5"></i>
+                                    <i class="fa-brands fa-css3-alt"></i>
+                                    <i class="fa-brands fa-square-js"></i>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
