--- a/index.html
+++ b/index.html
@@ -140,78 +140,79 @@
 
                 <div id="projeto-container">
 
-                    <div class="projeto">
-                        <img src="imgs/projeto-e-commerce.png" alt="Projeto E-commerce" class="foto-projeto">
-
-                        <div class="projeto-info">
-                            <h3 class="titulo">Projeto E-commerce</h3>
-                            <p>Projeto front-end de um e-commerce focado em organização com módulos js, manipulação de
-                                DOM e boas práticas de UI/UX.</p>
-                            <div class="descricao">
-                                <h4>Tecnologias</h4>
-                                <ul>
-                                    <li>HTML</li>
-                                    <li>CSS</li>
-                                    <li>JavaScript</li>
-                                </ul>
-
-                                <div class="tecnologias">
-                                    <i class="fa-brands fa-html5"></i>
-                                    <i class="fa-brands fa-css3-alt"></i>
-                                    <i class="fa-brands fa-square-js"></i>
+                    <a href="https://paulo-arthur-dev.github.io/projeto-ecommerce/" target="_blank">
+                        <div class="projeto">
+                            <img src="imgs/projeto-e-commerce.png" alt="Projeto E-commerce" class="foto-projeto">
+                            <div class="projeto-info">
+                                <h3 class="titulo">Projeto E-commerce</h3>
+                                <p>Projeto front-end de um e-commerce focado em organização com módulos js, manipulação de
+                                    DOM e boas práticas de UI/UX.</p>
+                                <div class="descricao">
+                                    <h4>Tecnologias</h4>
+                                    <ul>
+                                        <li>HTML</li>
+                                        <li>CSS</li>
+                                        <li>JavaScript</li>
+                                    </ul>
+                                    <div class="tecnologias">
+                                        <i class="fa-brands fa-html5"></i>
+                                        <i class="fa-brands fa-css3-alt"></i>
+                                        <i class="fa-brands fa-square-js"></i>
+                                    </div>
                                 </div>
                             </div>
                         </div>
-                    </div>
+                    </a>
 
-                    <div class="projeto">
-                        <img src="imgs/catalogo-de-filmes.png" alt="Catálogo de Filmes" class="foto-projeto">
-
-                        <div class="projeto-info">
-                            <h3 class="titulo">Catálogo de Filmes</h3>
-                            <p>Um catálogo de filmes desenvolvido em React, onde é possível visualizar cartazes, títulos
-                                e filtrar os filmes por categoria.</p>
-                            <div class="descricao">
-                                <h4>Tecnologias</h4>
-                                <ul>
-                                    <li>React</li>
-                                    <li>HTML</li>
-                                    <li>CSS</li>
-                                    <li>JavaScript</li>
-                                </ul>
-
-                                <div class="tecnologias">
-                                    <i class="fa-brands fa-react"></i>
-                                    <i class="fa-brands fa-html5"></i>
-                                    <i class="fa-brands fa-css3-alt"></i>
-                                    <i class="fa-brands fa-square-js"></i>
+                    <a href="https://projeto-catalogo-de-filmes.vercel.app/" target="_blank">
+                        <div class="projeto">
+                            <img src="imgs/catalogo-de-filmes.png" alt="Catálogo de Filmes" class="foto-projeto">
+                            <div class="projeto-info">
+                                <h3 class="titulo">Catálogo de Filmes</h3>
+                                <p>Um catálogo de filmes desenvolvido em React, onde é possível visualizar cartazes, títulos
+                                    e filtrar os filmes por categoria.</p>
+                                <div class="descricao">
+                                    <h4>Tecnologias</h4>
+                                    <ul>
+                                        <li>React</li>
+                                        <li>HTML</li>
+                                        <li>CSS</li>
+                                        <li>JavaScript</li>
+                                    </ul>
+                                    <div class="tecnologias">
+                                        <i class="fa-brands fa-react"></i>
+                                        <i class="fa-brands fa-html5"></i>
+                                        <i class="fa-brands fa-css3-alt"></i>
+                                        <i class="fa-brands fa-square-js"></i>
+                                    </div>
                                 </div>
                             </div>
                         </div>
-                    </div>
+                    </a>
 
-                    <div class="projeto">
-                        <img src="imgs/relogio-digital.jpeg" alt="Relógio Digital" class="foto-projeto">
-
-                        <div class="projeto-info">
-                            <h3 class="titulo">Relógio Digital</h3>
-                            <p>Um mini projeto de Relógio Digital. O relógio exibe horas, minutos e segundos em tempo real, com uma interface limpa, moderna e responsiva.</p>
-                            <div class="descricao">
-                                <h4>Tecnologias</h4>
-                                <ul>
-                                    <li>HTML</li>
-                                    <li>CSS</li>
-                                    <li>JavaScript</li>
-                                </ul>
-
-                                <div class="tecnologias">
-                                    <i class="fa-brands fa-html5"></i>
-                                    <i class="fa-brands fa-css3-alt"></i>
-                                    <i class="fa-brands fa-square-js"></i>
+                    <a href="https://paulo-arthur-dev.github.io/relogio-digital/" target="_blank">
+                        <div class="projeto">
+                            <img src="imgs/relogio-digital.jpeg" alt="Relógio Digital" class="foto-projeto">
+                            <div class="projeto-info">
+                                <h3 class="titulo">Relógio Digital</h3>
+                                <p>Um mini projeto de Relógio Digital. O relógio exibe horas, minutos e segundos em tempo real, com uma interface limpa, moderna e responsiva.</p>
+                                <div class="descricao">
+                                    <h4>Tecnologias</h4>
+                                    <ul>
+                                        <li>HTML</li>
+                                        <li>CSS</li>
+                                        <li>JavaScript</li>
+                                    </ul>
+                                    <div class="tecnologias">
+                                        <i class="fa-brands fa-html5"></i>
+                                        <i class="fa-brands fa-css3-alt"></i>
+                                        <i class="fa-brands fa-square-js"></i>
+                                    </div>
                                 </div>
                             </div>
                         </div>
-                    </div>
+                    </a>
+
                 </div>
             </article>
         </section>
