--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfólio Paulo Arthur</title>
-    <link rel="shortcut icon" href="imgs/favicon.svg" type="image/svg">
+    <link rel="shortcut icon" href="imgs/address-card-solid-full.svg" type="image/svg">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
         integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
@@ -14,13 +14,15 @@
 
 <body class="escuro">
     <header>
+        <img src="imgs/logo PA.png" alt="Logo">
+        
         <nav id="menu">
             <ul>
-                <li><a href="#ficha" class="link"> <i class="fa-solid fa-house"></i> </a></li>
-                <li><a href="#skills" class="link"> <i class="fa-solid fa-brain"></i> </a></li>
+                <li class="btn-inicio"><a href="#ficha" class="link"> <i class="fa-solid fa-house"></i> </a></li>
+                <li><a href="#skills" class="link"> <i class="fa-solid fa-code"></i> </a></li>
                 <li><a href="#formacao" class="link"> <i class="fa-solid fa-graduation-cap"></i> </a></li>
-                <li><a href="#projetos" class="link"> <i class="fa-solid fa-trowel-bricks"></i> </a></li>
-                <li><a href="#" id="botao-tema" class="link"> <i class="fa-solid fa-moon"></i> </a></li>
+                <li><a href="#projetos" class="link"> <i class="fa-solid fa-folder"></i> </a></li>
+                <li><a href="" id="botao-tema" class="link"> <i class="fa-solid fa-moon"></i> </a></li>
             </ul>
         </nav>
     </header>
@@ -34,8 +36,7 @@
                 Atualmente, foco em aprimorar minhas habilidades no desenvolvimento web, aplicando boas práticas de
                 código e criando interfaces funcionais, organizadas e com atenção à experiência do usuário (UX/UI).
 
-                Neste portfólio, apresento minhas skills, formação e projetos, que refletem minha evolução e dedicação
-                na área.</p>
+                </p>
 
             <div id="social">
                 <a href="https://www.linkedin.com/in/paulo-arthur13/" target="_blank"> <i
@@ -50,7 +51,7 @@
 
         <section id="detalhes">
             <article id="skills">
-                <h2> <i class="fa-solid fa-code"></i> Minhas skills</h2>
+                <h2> <i class="fa-solid fa-code"></i> Minha stack</h2>
 
                 <div id="skill-container">
                     <div class="item">
@@ -89,22 +90,22 @@
                     <div class="item">
                         <div class="info">
                             <span class="nome"> <i class="fa-brands fa-react"></i> React</span>
-                            <span class="porcent">50%</span>
+                            <span class="porcent">60%</span>
                         </div>
 
                         <div class="barra">
-                            <div class="progresso" style="width: 50%;"></div>
+                            <div class="progresso" style="width: 60%;"></div>
                         </div>
                     </div>
 
                     <div class="item">
                         <div class="info">
                             <span class="nome"> <i class="fa-brands fa-css"></i> Tailwind</span>
-                            <span class="porcent">45%</span>
+                            <span class="porcent">50%</span>
                         </div>
 
                         <div class="barra">
-                            <div class="progresso" style="width: 45%;"></div>
+                            <div class="progresso" style="width: 50%;"></div>
                         </div>
                     </div>
 
@@ -136,7 +137,7 @@
             </article>
 
             <article id="projetos">
-                <h2> <i <i class="fa-solid fa-folder"></i> Projetos</h2>
+                <h2> <i class="fa-solid fa-folder"></i> Projetos</h2>
 
                 <div id="projeto-container">
 
@@ -219,8 +220,7 @@
     </main>
 
     <footer>
-        <p>Portfólio desenvolvido por <a href="https://www.cursoemvideo.com/" target="_blank" rel="nofollow">Curso em
-                Vídeo</a> &copy; 2025</p>
+        <p> <span>Paulo Arthur Dev</span> &copy; 2025</p>
     </footer>
 
 
