alteração do logo

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body class="escuro">
     <header>
-        <img src="imgs/logo PA.png" alt="Logo">
+        <img src="imgs/svg logo PA.svg" alt="Logo">
         
         <nav id="menu">
             <ul>
