--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfólio Paulo Arthur</title>
-    <link rel="shortcut icon" href="imgs/address-card-solid-full.svg" type="image/svg">
-    <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="assets/imgs/address-card-solid-full.svg" type="image/svg">
+    <link rel="stylesheet" href="assets/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
         integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -14,7 +14,7 @@
 
 <body class="escuro">
     <header>
-        <img src="imgs/svg logo PA.svg" alt="Logo">
+        <img src="assets/imgs/svg logo PA.svg" alt="Logo">
         
         <nav id="menu">
             <ul>
@@ -29,7 +29,7 @@
 
     <main>
         <section id="ficha">
-            <img src="imgs/foto-perfil.jpg" alt="Paulo Arthur" class="foto">
+            <img src="assets/imgs/foto-perfil.jpg" alt="Paulo Arthur" class="foto">
 
             <h1>Paulo Arthur Maciel</h1>
             <p>Me chamo Paulo Arthur, desenvolvedor Front-End em formação, apaixonado por tecnologia desde cedo.
@@ -143,7 +143,7 @@
 
                     <a href="https://paulo-arthur-dev.github.io/projeto-ecommerce/" target="_blank">
                         <div class="projeto">
-                            <img src="imgs/projeto-e-commerce.png" alt="Projeto E-commerce" class="foto-projeto">
+                            <img src="assets/imgs/projeto-e-commerce.png" alt="Projeto E-commerce" class="foto-projeto">
                             <div class="projeto-info">
                                 <h3 class="titulo">Projeto E-commerce</h3>
                                 <p>Projeto front-end de um e-commerce focado em organização com módulos js, manipulação de
@@ -167,7 +167,7 @@
 
                     <a href="https://projeto-catalogo-de-filmes.vercel.app/" target="_blank">
                         <div class="projeto">
-                            <img src="imgs/catalogo-de-filmes.png" alt="Catálogo de Filmes" class="foto-projeto">
+                            <img src="assets/imgs/catalogo-de-filmes.png" alt="Catálogo de Filmes" class="foto-projeto">
                             <div class="projeto-info">
                                 <h3 class="titulo">Catálogo de Filmes</h3>
                                 <p>Um catálogo de filmes desenvolvido em React, onde é possível visualizar cartazes, títulos
@@ -193,7 +193,7 @@
 
                     <a href="https://paulo-arthur-dev.github.io/relogio-digital/" target="_blank">
                         <div class="projeto">
-                            <img src="imgs/relogio-digital.jpeg" alt="Relógio Digital" class="foto-projeto">
+                            <img src="assets/imgs/relogio-digital.jpeg" alt="Relógio Digital" class="foto-projeto">
                             <div class="projeto-info">
                                 <h3 class="titulo">Relógio Digital</h3>
                                 <p>Um mini projeto de Relógio Digital. O relógio exibe horas, minutos e segundos em tempo real, com uma interface limpa, moderna e responsiva.</p>
@@ -220,12 +220,12 @@
     </main>
 
     <footer>
-        <p> <span>Paulo Arthur Dev</span> &copy; 2025</p>
+        <p> <span>Paulo Arthur Dev</span> &copy; 2026</p>
     </footer>
 
 
 
-    <script src="script.js"></script>
+    <script src="assets/script.js"></script>
 </body>
 
 </html>
