--- a/index.html
+++ b/index.html
@@ -100,6 +100,17 @@
 
                     <div class="item">
                         <div class="info">
+                            <span class="nome"> <i class="fa-brands fa-bootstrap"></i> Bootstrap</span>
+                            <span class="porcent">55%</span>
+                        </div>
+
+                        <div class="barra">
+                            <div class="progresso" style="width: 55%;"></div>
+                        </div>
+                    </div>
+                    
+                    <div class="item">
+                        <div class="info">
                             <span class="nome"> <i class="fa-brands fa-css"></i> Tailwind</span>
                             <span class="porcent">50%</span>
                         </div>
