icone mobile e placeholder p projetos

--- a/index.html
+++ b/index.html
@@ -225,6 +225,22 @@
                         </div>
                     </a>
 
+                    <div class="projeto" style="opacity: 0.7; cursor: default;">
+                            <img src="assets/imgs/placeholder-thumbnail-xml.jpg" alt="Placeholder" class="foto-projeto">
+                            <div class="projeto-info">
+                                <h3 class="titulo">Em breve...</h3>
+                                <p>... ... ... ...</p>
+                                <div class="descricao">
+                                    <h4>Tecnologias</h4>
+                                    <ul>
+                                        <li>...</li>
+                                        <li>...</li>
+                                        <li>...</li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+
                 </div>
             </article>
         </section>
